# mcp-imessage

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: ci.yml
src/: contacts.rs  main.rs  messages.rs  send.rs
ui/: demo.html  index.html  package-lock.json  package.json  server.ts  showcase.html  tsconfig.json
ui/src/: catalog.ts  demo.tsx  globals.css  imessage-components.tsx  main.tsx  showcase.tsx
