[package]
name = "mcp-imessage"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mcp-imessage"
path = "src/main.rs"

[dependencies]
rmcp = { version = "1.1.0", features = ["server", "transport-io", "macros"] }
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
